softcoded a lot of visual things

--- a/app/src/main/res/layout/character_creator_page_one.xml
+++ b/app/src/main/res/layout/character_creator_page_one.xml
@@ -79,8 +79,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="65dp"
         android:layout_marginEnd="40dp"
-        android:backgroundTint="@color/purple"
+        android:backgroundTint="@color/turquoise"
         android:text="@string/navigate_next"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/centerAligner"
         app:layout_constraintTop_toBottomOf="@id/EDIT_CHARISMA" />
@@ -91,8 +92,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="65dp"
-        android:backgroundTint="@color/purple"
+        android:backgroundTint="@color/turquoise"
         android:text="@string/action_character_roll_stats"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toStartOf="@id/centerAligner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/EDIT_WISDOM" />
@@ -114,8 +116,9 @@
         android:id="@+id/character_creator_page_one_minimum_health"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:backgroundTint="@color/purple"
+        android:backgroundTint="@color/turquoise"
         android:text="@string/action_character_minimum_health"
+        android:textColor="@color/black"
         android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@id/centerAligner"
         app:layout_constraintTop_toTopOf="@id/centerAligner" />
@@ -125,8 +128,9 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
-        android:backgroundTint="@color/purple"
+        android:backgroundTint="@color/turquoise"
         android:text="@string/action_character_maximum_health"
+        android:textColor="@color/black"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@id/character_creator_page_one_minimum_health"
         app:layout_constraintTop_toTopOf="@id/character_creator_page_one_minimum_health" />
@@ -135,9 +139,10 @@
         android:id="@+id/character_creator_page_one_roll_health"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:backgroundTint="@color/purple"
+        android:backgroundTint="@color/turquoise"
         android:padding="1dp"
         android:text="@string/action_character_roll_health"
+        android:textColor="@color/black"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@id/character_creator_page_one_maximum_health"
         app:layout_constraintHorizontal_bias="0.0"
@@ -160,7 +165,6 @@
         android:layout_height="60dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="10dp"
-        android:adjustViewBounds="true"
         android:background="@drawable/strength"
         android:backgroundTint="@color/black"
         android:scaleType="centerCrop"
@@ -253,7 +257,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/black"
-        android:src="@drawable/dexterity"
+        android:background="@drawable/dexterity"
         app:layout_constraintBottom_toTopOf="@+id/DEXTERITY_TEXT"
         app:layout_constraintEnd_toStartOf="@id/CONSTITUTION_ICON"
         app:layout_constraintStart_toEndOf="@id/STRENGTH_ICON"
@@ -292,7 +296,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="40dp"
         android:backgroundTint="@color/black"
-        android:src="@drawable/constitution"
+        android:background="@drawable/constitution"
         app:layout_constraintBottom_toTopOf="@+id/CONSTITUTION_TEXT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_edit_subclass" />
@@ -328,7 +332,7 @@
         android:layout_height="60dp"
         android:layout_marginStart="40dp"
         android:backgroundTint="@color/black"
-        android:src="@drawable/intelligence"
+        android:background="@drawable/intelligence"
         app:layout_constraintBottom_toTopOf="@+id/INTELLIGENCE_TEXT"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/EDIT_STRENGTH" />
@@ -364,7 +368,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:backgroundTint="@color/black"
-        android:src="@drawable/wisdom"
+        android:background="@drawable/wisdom"
         app:layout_constraintBottom_toTopOf="@+id/WISDOM_TEXT"
         app:layout_constraintEnd_toStartOf="@id/CHARISMA_ICON"
         app:layout_constraintStart_toEndOf="@+id/INTELLIGENCE_ICON"
@@ -401,7 +405,7 @@
         android:layout_height="60dp"
         android:layout_marginEnd="40dp"
         android:backgroundTint="@color/black"
-        android:src="@drawable/charisma"
+        android:background="@drawable/charisma"
         app:layout_constraintBottom_toTopOf="@+id/CHARISMA_TEXT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/EDIT_CONSTITUTION" />
