--- a/app/src/main/res/layout/weapons_information.xml
+++ b/app/src/main/res/layout/weapons_information.xml
@@ -12,7 +12,9 @@
         android:id="@+id/backtodataview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#69B4FF"
         android:text="Back"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.009"
@@ -40,7 +42,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@color/white"
+                android:background="@color/weapon_page_blue"
+                android:backgroundTint="#69B4FF"
                 android:padding="5dp"
                 android:text="@string/text_weapon_damage"
                 android:textColor="@color/black" />
@@ -50,7 +53,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@color/white"
+                android:background="@color/weapon_page_blue"
+                android:backgroundTint="#69B4FF"
                 android:padding="5dp"
                 android:text="@string/text_weapon_description"
                 android:textColor="@color/black" />
@@ -60,7 +64,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@color/white"
+                android:background="@color/weapon_page_blue"
+                android:backgroundTint="#69B4FF"
                 android:padding="5dp"
                 android:text="@string/text_weapon_type"
                 android:textColor="@color/black" />
@@ -70,7 +75,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@color/white"
+                android:background="@color/weapon_page_blue"
+                android:backgroundTint="#69B4FF"
                 android:padding="5dp"
                 android:text="@string/text_weapon_description"
                 android:textColor="@color/black" />
@@ -80,7 +86,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@color/white"
+                android:background="@color/weapon_page_blue"
+                android:backgroundTint="#69B4FF"
                 android:padding="5dp"
                 android:text="@string/text_weapon_attack_bonus"
                 android:textColor="@color/black" />
@@ -90,7 +97,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@color/white"
+                android:background="@color/weapon_page_blue"
+                android:backgroundTint="#69B4FF"
                 android:padding="5dp"
                 android:text="@string/text_weapon_tag"
                 android:textColor="@color/black" />
@@ -100,7 +108,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@color/white"
+                android:background="@color/weapon_page_blue"
+                android:backgroundTint="#69B4FF"
                 android:padding="5dp"
                 android:text="@string/text_weapon_projectile"
                 android:textColor="@color/black" />
@@ -115,7 +124,8 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="5dp"
-        android:background="@color/white"
+        android:background="@color/weapon_page_blue"
+        android:backgroundTint="@color/weapon_page_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/backtodataview" />
