--- a/app/src/main/res/layout/data_view.xml
+++ b/app/src/main/res/layout/data_view.xml
@@ -14,7 +14,7 @@
         android:id="@+id/dataViewBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#75C7AE"
+        android:backgroundTint="@color/turquoise"
         android:text="@string/navigate_back"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,9 @@
         android:id="@+id/weaponsinfo"
         android:layout_width="337dp"
         android:layout_height="100dp"
+        android:backgroundTint="@color/turquoise"
         android:text="@string/navigate_info_weapons"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.519"
@@ -36,7 +38,9 @@
         android:id="@+id/spellsinfo"
         android:layout_width="338dp"
         android:layout_height="100dp"
+        android:backgroundTint="@color/turquoise"
         android:text="@string/navigate_info_spells"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
@@ -48,7 +52,9 @@
         android:id="@+id/armorinfo"
         android:layout_width="338dp"
         android:layout_height="100dp"
+        android:backgroundTint="@color/turquoise"
         android:text="@string/navigate_info_armor"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.52"
