--- a/app/src/main/res/layout/dice_roller.xml
+++ b/app/src/main/res/layout/dice_roller.xml
@@ -14,7 +14,7 @@
         android:id="@+id/dice_roller_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#75C7AE"
+        android:backgroundTint="@color/turquoise"
         android:text="@string/navigate_back"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
         android:id="@+id/sixSide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#71C0A7"
+        android:backgroundTint="@color/turquoise"
         android:text="@string/dice_d6"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,7 +52,7 @@
         android:id="@+id/eightSide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#60A38F"
+        android:backgroundTint="@color/turquoise"
         android:text="@string/dice_d8"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -66,7 +66,7 @@
         android:id="@+id/tenSide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#6DB8A1"
+        android:backgroundTint="@color/turquoise"
         android:text="@string/dice_d10"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -80,7 +80,7 @@
         android:id="@+id/twelveSide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#60A38F"
+        android:backgroundTint="@color/turquoise"
         android:text="@string/dice_d12"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
