--- a/app/src/main/res/layout/help.xml
+++ b/app/src/main/res/layout/help.xml
@@ -15,7 +15,9 @@
         android:layout_width="168dp"
         android:layout_height="113dp"
         android:layout_marginStart="16dp"
+        android:backgroundTint="@color/turquoise"
         android:text="Button"
+        android:textColor="@color/black"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +29,9 @@
         android:layout_width="168dp"
         android:layout_height="113dp"
         android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/turquoise"
         android:text="Button"
+        android:textColor="@color/black"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +43,9 @@
         android:layout_width="168dp"
         android:layout_height="113dp"
         android:layout_marginStart="16dp"
+        android:backgroundTint="@color/turquoise"
         android:text="Button"
+        android:textColor="@color/black"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +57,9 @@
         android:layout_width="168dp"
         android:layout_height="113dp"
         android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/turquoise"
         android:text="Button"
+        android:textColor="@color/black"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,7 +118,9 @@
         android:id="@+id/HelpBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/turquoise"
         android:text="@string/navigate_back"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
