--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="170dp"
             android:layout_marginTop="60dp"
-            android:backgroundTint="#D34141"
+            android:backgroundTint="@color/menu_red"
             android:contentDescription="view characters "
             app:cornerRadius="100dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +32,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:text="@string/navigate_characters"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/white"
             android:textSize="40sp"
             app:layout_constraintBottom_toBottomOf="@id/main_menu_view_characters"
             app:layout_constraintEnd_toStartOf="@id/character_icon"
@@ -42,21 +42,21 @@
         <ImageView
             android:id="@+id/character_icon"
             android:layout_width="100dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-            android:scaleX="1"
-            android:src="@drawable/character"
+            android:background="@drawable/character"
+            android:backgroundTint="@color/black"
+            android:scaleType="centerInside"
             app:layout_constraintBottom_toBottomOf="@id/main_menu_view_characters"
             app:layout_constraintEnd_toEndOf="@id/main_menu_view_characters"
-            app:layout_constraintTop_toTopOf="@id/main_menu_view_characters"
-            tools:scaleY="1" />
+            app:layout_constraintTop_toTopOf="@id/main_menu_view_characters" />
 
         <Button
             android:id="@+id/main_menu_view_data"
             android:layout_width="match_parent"
             android:layout_height="170dp"
             android:layout_marginTop="40dp"
-            android:backgroundTint="#3B812C"
+            android:backgroundTint="@color/menu_green"
             android:contentDescription="Information page  "
             app:cornerRadius="100dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +71,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:text="@string/navigate_information"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/white"
             android:textSize="40sp"
             app:layout_constraintBottom_toBottomOf="@id/main_menu_view_data"
             app:layout_constraintEnd_toStartOf="@id/info_icon"
@@ -81,21 +81,21 @@
         <ImageView
             android:id="@+id/info_icon"
             android:layout_width="100dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-            android:scaleX="1"
-            android:src="@drawable/book"
+            android:background="@drawable/book"
+            android:backgroundTint="@color/black"
+            android:scaleType="centerInside"
             app:layout_constraintBottom_toBottomOf="@id/main_menu_view_data"
             app:layout_constraintEnd_toEndOf="@id/main_menu_view_data"
-            app:layout_constraintTop_toTopOf="@id/main_menu_view_data"
-            tools:scaleY="1" />
+            app:layout_constraintTop_toTopOf="@id/main_menu_view_data" />
 
         <Button
             android:id="@+id/main_menu_dice_roller"
             android:layout_width="match_parent"
             android:layout_height="170dp"
             android:layout_marginTop="40dp"
-            android:backgroundTint="#DB8B2B"
+            android:backgroundTint="@color/menu_orange"
             android:contentDescription="Dice Rollers "
             app:cornerRadius="100dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -110,7 +110,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:text="@string/navigate_dice_roller"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/white"
             android:textSize="40sp"
             app:layout_constraintBottom_toBottomOf="@id/main_menu_dice_roller"
             app:layout_constraintEnd_toStartOf="@id/dice_icon"
@@ -120,39 +120,42 @@
         <ImageView
             android:id="@+id/dice_icon"
             android:layout_width="100dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-
-            android:scaleX="1"
-            android:src="@drawable/d20"
+            android:background="@drawable/d20"
+            android:backgroundTint="@color/black"
+            android:scaleType="centerInside"
             app:layout_constraintBottom_toBottomOf="@id/main_menu_dice_roller"
             app:layout_constraintEnd_toEndOf="@id/main_menu_dice_roller"
-            app:layout_constraintTop_toTopOf="@id/main_menu_dice_roller"
-            tools:scaleY="1" />
+            app:layout_constraintTop_toTopOf="@id/main_menu_dice_roller" />
 
         <TextView
             android:id="@+id/Title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:background="#D5D6D6"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="6dp"
+            android:background="@color/menu_grey"
             android:text="@string/text_title_main_menu"
-            android:textColor="#000"
+            android:textAlignment="center"
+            android:textColor="@color/black"
             android:textSize="30sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="@id/main_menu_settings"
+            app:layout_constraintEnd_toStartOf="@id/main_menu_settings"
+            app:layout_constraintStart_toEndOf="@id/main_menu_help_page"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_constraintTop_toTopOf="@id/main_menu_settings" />
 
         <ImageButton
             android:id="@+id/main_menu_settings"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginTop="4dp"
+            android:backgroundTint="@color/menu_grey"
+            android:contentDescription="setting page "
             android:scaleType="centerCrop"
             android:src="@drawable/cog"
-            android:contentDescription="setting page "
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -161,6 +164,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginTop="4dp"
+            android:backgroundTint="@color/menu_grey"
             android:contentDescription="Help page "
             android:scaleType="centerCrop"
             android:src="@drawable/skillcheck"
