--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -25,18 +25,20 @@
         android:id="@+id/SettingsBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#75C7AE"
+        android:backgroundTint="@color/turquoise"
         android:text="@string/navigate_back"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button10"
         android:layout_width="365dp"
         android:layout_height="80dp"
         android:layout_marginStart="16dp"
+        android:backgroundTint="@color/turquoise"
         android:text="Button"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -47,7 +49,9 @@
         android:layout_width="365dp"
         android:layout_height="80dp"
         android:layout_marginStart="16dp"
+        android:backgroundTint="@color/turquoise"
         android:text="Button"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -58,7 +62,9 @@
         android:layout_width="365dp"
         android:layout_height="80dp"
         android:layout_marginStart="16dp"
+        android:backgroundTint="@color/turquoise"
         android:text="Button"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
