--- a/app/src/main/res/layout/spells_information.xml
+++ b/app/src/main/res/layout/spells_information.xml
@@ -28,7 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="#896F6F"
+                android:background="@color/spell_page_maroon"
                 android:padding="5dp"
                 android:text="School of Magic:"
                 android:textColor="@color/black" />
@@ -38,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="#896F6F"
+                android:background="@color/spell_page_maroon"
                 android:padding="5dp"
                 android:text="Cast Time"
                 android:textColor="@color/black" />
@@ -48,7 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="#896F6F"
+                android:background="@color/spell_page_maroon"
                 android:padding="5dp"
                 android:text="Range"
                 android:textColor="@color/black" />
@@ -58,7 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="#896F6F"
+                android:background="@color/spell_page_maroon"
                 android:padding="5dp"
                 android:text="Description"
                 android:textColor="@color/black" />
@@ -68,7 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="#896F6F"
+                android:background="@color/spell_page_maroon"
                 android:padding="5dp"
                 android:text="Supported Classes"
                 android:textColor="@color/black" />
@@ -78,7 +78,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="#896F6F"
+                android:background="@color/spell_page_maroon"
                 android:padding="5dp"
                 android:text="Components"
                 android:textColor="@color/black" />
@@ -88,7 +88,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="#896F6F"
+                android:background="@color/spell_page_maroon"
                 android:padding="5dp"
                 android:text="Materials"
                 android:textColor="@color/black" />
@@ -103,7 +103,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="5dp"
-        android:background="#896F6F"
+        android:background="@color/spell_page_maroon"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias=".5"
@@ -114,7 +114,7 @@
         android:id="@+id/backtodataview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#896F6F"
+        android:backgroundTint="@color/spell_page_maroon"
         android:text="Back"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
