--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,10 @@
     <color name="white">#FFFFFFFF</color>
     <color name="turquoise">#74C6AD</color>
     <color name="purple">#6750A3</color>
+    <color name="menu_red">#D24141</color>
+    <color name="menu_green">#3B802C</color>
+    <color name="menu_orange">#DA8A2B</color>
+    <color name="menu_grey">#D4D5D5</color>
+    <color name="spell_page_maroon">#8F2F2F</color>
+    <color name="weapon_page_blue">#69B3FD</color>
 </resources>
