--- a/app/src/main/res/layout/character_creator_page_one.xml
+++ b/app/src/main/res/layout/character_creator_page_one.xml
@@ -5,6 +5,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/ccp1_blue"
     tools:context=".CharacterCreatorPageOne"
     tools:ignore="LabelFor"
     tools:layout_editor_absoluteX="0dp"
@@ -256,8 +257,8 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
-        android:backgroundTint="@color/black"
         android:background="@drawable/dexterity"
+        android:backgroundTint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/DEXTERITY_TEXT"
         app:layout_constraintEnd_toStartOf="@id/CONSTITUTION_ICON"
         app:layout_constraintStart_toEndOf="@id/STRENGTH_ICON"
@@ -295,8 +296,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="40dp"
-        android:backgroundTint="@color/black"
         android:background="@drawable/constitution"
+        android:backgroundTint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/CONSTITUTION_TEXT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_edit_subclass" />
@@ -331,8 +332,8 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="40dp"
-        android:backgroundTint="@color/black"
         android:background="@drawable/intelligence"
+        android:backgroundTint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/INTELLIGENCE_TEXT"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/EDIT_STRENGTH" />
@@ -367,8 +368,8 @@
         android:id="@+id/WISDOM_ICON"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:backgroundTint="@color/black"
         android:background="@drawable/wisdom"
+        android:backgroundTint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/WISDOM_TEXT"
         app:layout_constraintEnd_toStartOf="@id/CHARISMA_ICON"
         app:layout_constraintStart_toEndOf="@+id/INTELLIGENCE_ICON"
@@ -404,8 +405,8 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginEnd="40dp"
-        android:backgroundTint="@color/black"
         android:background="@drawable/charisma"
+        android:backgroundTint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/CHARISMA_TEXT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/EDIT_CONSTITUTION" />
