lots of recoloring!

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="turquoise">#74C6AD</color>
     <color name="purple">#6750A3</color>
+    <color name="lavender">#9B86CA</color>
     <color name="menu_red">#D24141</color>
     <color name="menu_green">#3B802C</color>
     <color name="menu_orange">#DA8A2B</color>
