working on notes; it's overtime-time

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="menu_grey">#D4D5D5</color>
     <color name="spell_page_maroon">#8F2F2F</color>
     <color name="weapon_page_blue">#69B3FD</color>
+    <color name="cv_green">#0F5D11</color>
 </resources>
