--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="menu_red">#D24141</color>
     <color name="menu_green">#3B802C</color>
     <color name="menu_orange">#DA8A2B</color>
-    <color name="menu_grey">#D4D5D5</color>
+    <color name="menu_grey">#d5D4D5D5</color>
     <color name="spell_page_maroon">#8F2F2F</color>
     <color name="weapon_page_blue">#69B3FD</color>
     <color name="ccp1_blue">#B6E0E3</color>
